--- a/trunk/latexlab/eclipse/war/codemirror/css/latexcolors.css
+++ b/trunk/latexlab/eclipse/war/codemirror/css/latexcolors.css
@@ -1,52 +1,35 @@
-.editbox {
-  margin: .4em;
-  padding: 5px;
-  font-family: monospace;
-  font-size: 10pt;
-  color: black;
+body {
+  padding: 0;	
 }
 
-pre.code, .editbox {
-  color: #666666;
+.editbox {
+  font-family: monospace;
+  padding: 0.2em;
+  margin: 0;
+  background-color: #FFFFFF;
 }
 
 .editbox p {
   margin: 0;
+  padding: 0;
+}
+
+span.latex-text {
 }
 
 span.latex-command {
-  font-weight: bold;
   color: #000084;
+  font-weight: bold;
 }
 
-span.css-at {
-  color: #770088;
+span.latex-comment {
+  color: green;	
 }
 
-span.css-unit {
-  color: #228811;
+span.latex-inline-math {
+  color: #882288;	
 }
 
-span.css-value {
-  color: #770088;
-}
-
-span.css-identifier {
-  color: black;
-}
-
-span.css-important {
-  color: #0000FF;
-}
-
-span.css-colorcode {
-  color: #004499;
-}
-
-span.css-comment {
-  color: #AA7700;
-}
-
-span.css-string {
-  color: #AA2222;
+span.latex-braces {
+  color: #346CB7;
 }
