Updates the File List and Resource dialogs with a tree view.

--- a/trunk/latexlab/eclipse/war/codemirror/css/latexcolors.css
+++ b/trunk/latexlab/eclipse/war/codemirror/css/latexcolors.css
@@ -4,9 +4,13 @@ body {
 
 .editbox {
   font-family: monospace;
-  padding: 0.2em;
+  font-size: 13px;
+  padding: 11px;
+  padding-left: 40px;
   margin: 0;
   background-color: #FFFFFF;
+  background-image: url(/images/line-numbers.png);
+  background-repeat: no-repeat;
 }
 
 .editbox p {
