--- a/trunk/latexlab/eclipse/war/styles/latexlab.css
+++ b/trunk/latexlab/eclipse/war/styles/latexlab.css
@@ -66,10 +66,6 @@ a, a:visited, a:hover {
 	padding: 4px;
 }
 /** Main Menu Panel */
-.lab-Menu-Loading{
-	font-color: #CCCCCC;
-	padding: 8px;
-}
 .lab-Menu-Panel{
 	border-top: solid 2px #BDCFFF;
 	background-color: #E7EBFF;
@@ -123,18 +119,29 @@ a, a:visited, a:hover {
 	font-weight: normal;
 	font-size: 12px;
 	color: #333333;
-	padding-top: 6px;
-	padding-bottom: 6px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	padding-left: 6px;
 	width: 210px;
 	white-space: nowrap;
 }
-.gwt-MenuBar-vertical .gwt-MenuItem IMG {
-	margin-right: 2px;
-	vertical-align: text-bottom;
-}
 .gwt-MenuBar-vertical .gwt-MenuItem-selected{
 	background-color: #D6EBFF;
+}
+.gwt-MenuBar-vertical .gwt-MenuItem span {
+	display: inline-block;
+	padding: 3px;
+	margin-right: 2px;
+}
+.gwt-MenuBar-vertical .gwt-MenuItem span img {
+	vertical-align: text-bottom;
+}
+.gwt-MenuBar-vertical .gwt-MenuItem-Highlighted span {
+	display: inline-block;
+	padding: 2px;
+	border: solid 1px #63A6E7;
+	background-color: #D6E3F7;
+	margin-right: 2px;
 }
 .gwt-MenuBarPopup {
 	z-index: 5;
@@ -718,7 +725,12 @@ a.lab-Header-Title:hover{
 .lab-Loading {
 	background-image: url(/images/loading.png);
 	background-repeat: no-repeat;
-	background-position: 20px 20px;
+	background-position: 4px 4px;
+}
+.lab-FileBox,
+.lab-FileBox-Empty {
+}
+.lab-FileBox-Empty {
 }
 .gwt-HorizontalSplitPanel left {
 	padding: 0px;
